welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: type int
var nbPas:int=0 
          ^Variables:8: error: not found: type int
var dejaFait:int=0
             ^Variables:9: error: not found: value dejafait
while(dejafait!=nbPas){
      ^Variables:11: error: not found: value dejafait
	dejafait= dejaFait + 1;
        ^Variables:13: error: not found: value posebiscuit
posebiscuit();
^