welcome.lessons.welcome.variables.Variables.scala.code
var nbPas:int=0 
while(!estSurBiscuit()){
	avance();
	 nbPas= nbPas + 1;
} 
prendBiscuit();
var dejaFait:int=0
while(dejafait!=nbPas){
	recule();
	dejafait= dejaFait + 1;
} 
posebiscuit();

